forth/test/fail/test_const_fold_redundant_addsub.af
use' ../../lang.af
fun: test_const_fold_redundant_addsub { val -- out } val 0 + end
